# limpa-downloads

./: Cargo.toml  LD  Makefile  README.md  build.rs  definicoes.json  item_de_exclusao.rs  janela_grafica.rs  limpa-downloads.v0.2.1.tar  main.rs
data_teste/: teste15.txt
external_lib/utilitarios/src/: por_extenso.rs
lib/: libutilitarios.rlib
libs/utilitarios/: Cargo.toml
libs/utilitarios/src/: legivel.rs
scripts/: cria_varias_amostras_em_downloads.py  variados-tipos-dirs.sh
src/: configuracao.rs  item_de_exclusao.rs  janela_grafica.rs  letreiro.rs  links.rs  main.rs  notificacoes.rs  remocao_diretorio.rs  tempo_tools.rs  validades.rs
src/instancia/: compila.py  instancia.h  main.c  teste.py
src/item_de_exclusao/: remocao_dir.rs  string_extensao.rs  testaRC.sh  validades.rs  variados-tipos-dirs.sh
src/item_de_exclusao/testes/: configuração_sem_cabeçalho.conf  configuração_sem_conteúdo.conf
tests/: cria_varias_amostras_em_downloads.py  multiplas_instancias.rs
